Update site documentation to reflect current codebase
- api-reference: Remove dead invertImages, add fromString/fromStream/renderingHint,
  add OutputStream output methods, fix error handling docs
- architecture: Add all new draw classes (GradientPainter, PatternPainter,
  FilterRenderer, BlendCompositor, GaussianBlur, MarkerDrawer, MaskPainter, etc.),
  update to SAX parsing, expand rendering pipeline diagram
- benchmark: Add JSVG and 2 new test cases (defs+use, markers+strokes)
- cli: Remove dead --invert-images flag, add JBang usage, add JPEG example
- faq: Update SVG support list (filters, patterns, masks, CSS selectors,
  markers, textPath, SVG fonts, conditional processing, SVGZ),
  add PDF troubleshooting section
- index: Update performance claims to match current benchmarks

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>